syntax="proto3";

package go.coffeeshop.proto.counterapi;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";
import "common.proto";

option go_package = "github.com/thangchung/go-coffeeshop/proto/gen";

service CounterService {
    rpc GetListOrderFulfillment(GetListOrderFulfillmentRequest) returns (GetListOrderFulfillmentResponse) {
        option (google.api.http) = {
            get: "/v1/fulfillment-orders"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "List order fulfillment"
            description: "List order fulfillment on the server."
            tags: "Orders"
        };
    }
    rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse) {
        option (google.api.http) = {
            post: "/v1/api/orders"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Place an order"
            description: "Place an order on the server."
            tags: "Orders"
        };
    }
}

message GetListOrderFulfillmentRequest {}
message GetListOrderFulfillmentResponse {
  repeated OrderDto orders = 1;
}

message OrderDto {
    string id = 1;
    int32 order_source = 2;
    string loyalty_member_id = 3;
    int32 order_status = 4;
    int32 localtion = 5;
    repeated LineItemDto line_items = 6;
}

message LineItemDto {
    string id = 1;
    int32 item_type = 2;
    string name = 3;
    double price = 4;
    int32 item_status = 5;
    bool is_barista_order = 6;
}

message PlaceOrderRequest {
    int32 command_type = 1;
    int32 order_source = 2;
    int32 location = 3;
    string loyalty_member_id = 4;
    repeated CommandItem barista_items = 5;
    repeated CommandItem kitchen_items = 6;
    google.protobuf.Timestamp timestamp = 7;
}
message PlaceOrderResponse {}

message CommandItem {
    int32 item_type = 1;
}