syntax="proto3";

package go.coffeeshop.proto.productapi;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "common.proto";

option go_package = "github.com/uucoffeeshop/coffeeshop-application/proto/gen";

service ProductService {
  rpc GetItemTypes(GetItemTypesRequest) returns (GetItemTypesResponse) {
    option (google.api.http) = {
      get: "/v1/api/item-types"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List item types"
      description: "List all item types on the server."
      tags: "ItemTypes"
    };
  }

  rpc GetItemsByType(GetItemsByTypeRequest) returns (GetItemsByTypeResponse) {
    option (google.api.http) = {
      get: "/v1/api/items-by-types/{item_types}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List items by type"
      description: "List items by type on the server."
      tags: "ItemTypes"
    };
  }
}

message GetItemTypesRequest {}
message GetItemTypesResponse {
  repeated ItemTypeDto item_types = 1;
}

message GetItemsByTypeRequest{
  string item_types = 1;
}
message GetItemsByTypeResponse{
  repeated ItemDto items = 1;
}

message ItemDto {
  double price = 1;
  int32 type = 2;
}

message ItemTypeDto {
  string name = 1;
  int32 type = 2;
  double price = 3;
  string image = 4;
}